--- a/themes/noteworthy/layouts/_default/terms.html
+++ b/themes/noteworthy/layouts/_default/terms.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
 <!-- Shows all of the site's tags -->
-<h1>Tags</h1>
+<h1>Categories</h1>
 <ul>
     {{ range .Data.Terms.Alphabetical }}
         <li><a href="{{ .Page.Permalink }}">{{ .Page.Title }}</a> {{ .Count }}</li>
