--- a/themes/noteworthy/assets/css/main.scss
+++ b/themes/noteworthy/assets/css/main.scss
@@ -294,6 +294,10 @@ nav {
     padding: 0.5em 1.5em 0em 1.5em;
     margin: 0em;
     max-width: 100%;
+
+    img {
+        max-width: 100%;
+    }
 }
 
 .paginator {
